--- a/car_price.ipynb
+++ b/car_price.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1_i8-s4FuVMxvrhxqDDkHxhxgASsRksfr",
-      "authorship_tag": "ABX9TyNvSfJbqE6jyOGSUGBx/Qfk",
+      "authorship_tag": "ABX9TyP7OLbxlYZqqr3cbb3XjCPD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "dRtqADROHvoT"
       },
@@ -48,13 +48,14 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/car_price/vehicles.csv', usecols=['price', 'year', 'manufacturer', 'model', 'condition', 'cylinders', 'fuel', 'odometer', 'transmission',\n",
-        "                                          'drive', 'type', 'paint_color'], nrows=100000)\n"
+        "df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/car_price/vehicles.csv', usecols=['price', 'year', 'manufacturer', 'model', 'condition',\n",
+        "                                                                                           'cylinders', 'fuel', 'odometer', 'transmission',\n",
+        "                                                                                           'drive', 'type', 'paint_color'], nrows=100000)\n"
       ],
       "metadata": {
         "id": "RT0G1BLvS9N_"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +84,7 @@
         "id": "2ws14pB1vWyD",
         "outputId": "3934bb8f-a2db-4d3d-e941-c4741d3d3221"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +130,7 @@
         "id": "QZ5CFTMrwvIP",
         "outputId": "f1cb56e8-9aab-4cba-e2e2-db780df2a51c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +173,7 @@
         "id": "EjufSo-qyFB_",
         "outputId": "58464ac7-01a4-45f6-e618-f9b3cadf0226"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +220,7 @@
         "id": "IB3vl23MzoJT",
         "outputId": "4b06c804-ea8c-495c-eaf4-ab6eb21daad2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +261,7 @@
         "id": "WNFukYyx7LRz",
         "outputId": "f6852561-0c9a-4ddb-c5cd-a1315cb0e9b8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,7 +323,7 @@
         "outputId": "28d2771d-989e-4175-e54e-059cf3911037",
         "collapsed": true
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +384,7 @@
         "id": "MCLqZNujVC9h",
         "outputId": "84e37da0-9c70-45cb-c425-0906e297f1b6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +420,7 @@
         "id": "AS-_yEQyFPbB",
         "outputId": "9c61a38e-899f-48d1-db1d-f9c53a3222b1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +455,7 @@
         "id": "h9U3MhySFXYA",
         "outputId": "5993dcc0-03cb-4e2c-a1a8-8bee24311222"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +491,7 @@
         "id": "3taaEoYfF9B_",
         "outputId": "5008eb38-4ed0-403b-e006-db660aaa300e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +547,7 @@
         "id": "BEdaeFJP9wWP",
         "outputId": "13cf0118-0377-49d0-85e5-910dcc536c3a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
